# krywok-kit-localize

./: LICENSE  README.md  pyproject.toml
krywok_kit_localize/: localize.py
