[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krywok-kit-localize"
version = "1.0.0"
description = "Krywok Kit Localize provides thread-safe locale management using context variables. It enables concurrent execution with different locale settings per context."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Krywok", email = "degadupeko@my-relay.app" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/krywok/krywok-codetable"
Documentation = "https://github.com/krywok/krywok-codetable"
Repository = "https://github.com/krywok/krywok-codetable"
Issues = "https://github.com/krywok/krywok-codetable/issues"

[tool.setuptools.packages.find]
where = ["."]
